2000-07-16  Jaka Mocnik  <jaka@barbara>

	* gnome-help.h (gnome_help_goto, gnome_help_pbox_goto): actually
	add the const stuff.

Fri Jul 14 01:41:05 2000  George Lebl <jirka@5z.com>

	* gnome-dentry.[ch]: s/int/gboolean/

	* gnome-help.[ch]: add const stuff

	* gnome-history.[ch]: add const stuff and GnomeHistoryEnt is a
	  typedef to the structure and NOT the pointer as this is
	  inconsistent with the rest of gnome and plain ugly

	* gnome-mime-info.[ch]: const stuff

	* gnome-regex.h: use a standard looking typedef for the structure

	* gnome-score.[ch]: const stuff

	* gnome-url.[ch]: GnomeURLDisplayContext again a typedef to
	  the structure NOT the pointer so that we are consistent again

	* gnomelib-init.[ch], gnomelib-init2.[ch]: const stuff

Wed Jul 12 02:25:14 2000  George Lebl <jirka@5z.com>

	* gnome-config.c, gnome-ditem.c, gnome-i18n.[ch], gnome-mime-info.c,
	  gnome-paper.[ch]:  Where an internal string or list is returned,
	  make the return constant.  gnome_i18n_get_preferred_language is
	  not constant, so remove the "const"

	* gnome-mime-info.c: before reversing the language list, make a copy

	* gnop-util.c: use g_strdup and not strdup

2000-06-15  Jody Goldberg <jgoldberg@home.com>

	* gnome-score.c (print_ascore) : setlocale returns a static buffer.
	  Copy it to safety.  Set the locale AFTER storing the current
	  setting.
	(log_score) : Ditto.
	(gnome_score_get_notable) : Ditto.

	* gnome-config.c (_gnome_config_get_float_with_default): Ditto.
	(_gnome_config_set_float) : Ditto.

Mon Jun 12 18:40:33 2000  George Lebl <jirka@5z.com>

	* gnome-util.c: update the comments.  Just to make gtk-doc work on
	  g_file_test, and take out the "will be removed thing on
	  g_file_exists as it won't

Fri May 26 12:24:02 2000  George Lebl <jirka@5z.com>

	* gnome-score.c: Applied patch from Dennis Bjorklund
	  <dennisb@cs.chalmers.se> to fix another unprotected atof with
	  setting locale to "C" and then back.
