@@ -1,3 +1,7 @@
+2000-07-31  Karl Eichwalder  <ke@suse.de>
+
+	* gnome-moz-remote2.c: Add missing dots.
+
 2000-07-16  Jaka Mocnik  <jaka@barbara>
 
 	* gnome-help.h (gnome_help_goto, gnome_help_pbox_goto): actually
